--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>change</p>
     <p>adicionado via clone</p>
     <p>adicionado via user 2</p>
+    <p>add remotamente 07/12/19:15</p>
 </body>
 </html>
